--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -56,6 +56,14 @@
     line-height: 1.625;
 }
 
+.someLinksWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 0.75rem;
+}
+
 /* Desktop Wrapper */
 
 .wrapper {
@@ -82,6 +90,7 @@
     padding: 0 var(--spacing-double);
     margin: 0 auto;
 }
+
 
 
 /* 
@@ -114,7 +123,7 @@
         max-width: 50%;
     }
 
-    .iconsWrapper {
+    .someLinksWrapper {
         gap: var(--spacing-double);
     }
 
